package NYT.NRegistry.NProto;

////////////////////////////////////////////////////////////////////////////////

message TReqGet
{
    required bytes TransactionId = 1;
    required bytes Path = 2;
}

message TRspGet
{
    required bytes Value = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqSet
{
    required bytes TransactionId = 1;
    required bytes Path = 2;
    required bytes Values = 3;
}

message TRspSet
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqRemove
{
    required bytes TransactionId = 1;
    required bytes Path = 2;
}

message TRspRemove
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqLock
{
    required bytes TransactionId = 1;
    required bytes Path = 2;
    required int32 Mode = 3;
}

message TRspLock
{
}

////////////////////////////////////////////////////////////////////////////////

